--- a/src/estilos/MenuPrincipal.css
+++ b/src/estilos/MenuPrincipal.css
@@ -6,11 +6,15 @@
 }
 .contenedor-menuprincipal{
     background-color: white;
-    border: 3px solid black;
-    margin: 10px;
+    margin-top: 10px;
     display: flex;
     justify-content: center;
-    width: 30%;
+    width: 100%;
+    overflow: hidden;
+}
+.rectangulo{
+    border: 3px solid black;
+    padding: 15px;
 }
 a{
     margin: 5px;
