Creación de más componentes y sus estilos..Creación de la página de contacto y pqrsf

--- a/src/estilos/FormInput.css
+++ b/src/estilos/FormInput.css
@@ -4,16 +4,14 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     box-sizing: border-box;
 }
-.contenedor-encabezado{
-    color: white;
-    font-weight: bold;
-    font-size: 42px;
-    line-height: 2;
-    border: 3px solid orange;
+.contenedor-input{
+    margin-bottom: 10px;
 }
-p{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
+.form{
+    display:flex;
     justify-content: center;
+}
+.formulario-input{
+    font-size: 20px;
+    width: 35%;
 }
