--- a/src/estilos/FormTextarea.css
+++ b/src/estilos/FormTextarea.css
@@ -4,18 +4,14 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     box-sizing: border-box;
 }
-.contenedor-encabezado{
-    
-    background-color: orange;
-    color: white;
-    font-weight: bold;
-    font-size: 60px;
-    line-height: 2;
-}
-p{
+.contenedor-textarea{
+    margin-top: 10px;
+    margin-bottom: 10px;
     display: flex;
-    flex-wrap: wrap;
-    align-items: center;
     justify-content: center;
-}
 
+}
+.formulario-textarea{
+    font-size: 20px;
+    resize: none;
+}
