--- a/src/estilos/BotonPequeño.css
+++ b/src/estilos/BotonPequeño.css
@@ -4,12 +4,12 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     box-sizing: border-box;
 }
-.cajon{
+.cajita{
     display:flex;
     justify-content: center;
     margin-bottom: 30px;
 }
-.boton{
+.botoncito{
     color: black;
     font-size: 30px;
     font-weight: bold;
@@ -20,7 +20,7 @@
     background-color: rgb(187, 184, 184);
     cursor: pointer;
 }
-.boton:hover{
+.botoncito:hover{
     color: white;
     background-color: orange;
 }
