--- a/src/estilos/EncabezadoPrincipal.css
+++ b/src/estilos/EncabezadoPrincipal.css
@@ -4,8 +4,8 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     box-sizing: border-box;
 }
-.contenedor-encabezado{
-    
+.contenedor-encabezado-principal{
+    border: 3px solid black;
     background-color: orange;
     color: white;
     font-weight: bold;
