--- a/src/estilos/BotonPequeño.css
+++ b/src/estilos/BotonPequeño.css
@@ -19,6 +19,8 @@
     width: 250px;
     background-color: rgb(187, 184, 184);
     cursor: pointer;
+    display: flex;
+    justify-content: center;
 }
 .botoncito:hover{
     color: white;
