--- a/src/estilos/Texto.css
+++ b/src/estilos/Texto.css
@@ -9,8 +9,9 @@
     justify-content: center;
     font-weight: 100;
     font-size: 30px;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
 }
 .text{
-    width: 80%;
+    text-align: center;
+    width: 60%;
 }
